@@ -313,7 +313,10 @@ add_matching_methods (int method_counter, struct type *t,
 				   NULL, VAR_DOMAIN,
 				   language,
 				   (int *) NULL);
-      if (sym_arr[i1])
+      /* See PR10966.  Remove check on symbol domain and class when
+	 we stop using (bad) linkage names on constructors.  */
+      if (sym_arr[i1] && (SYMBOL_DOMAIN (sym_arr[i1]) == VAR_DOMAIN
+			  && SYMBOL_CLASS (sym_arr[i1]) == LOC_BLOCK))
 	i1++;
       else
 	{
