@@ -1,5 +1,11 @@
 2010-02-19  Joel Brobecker  <brobecker@adacore.com>
 
+	Workaround for PR/10966:
+	* linespec.c (add_matching_methods): Only match methods that are
+	in the VAR_DOMAIN and whose class is LOC_BLOCK.
+
+2010-02-19  Joel Brobecker  <brobecker@adacore.com>
+
 	* configure.ac: Disable -Werror by default.
 	* configure: Regenerate.
 
